--- a/style.css
+++ b/style.css
@@ -8,12 +8,11 @@
   font-weight: bold;
   font-size: 32px;
   letter-spacing: 2px;
-  text-decoration: none;
   text-transform: uppercase;
   color: #8858CF;
   cursor: pointer;
   border: 3px solid;
-  padding: 0.25em 0.5em;
+  padding: 5px 10px;
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
   position: relative;
   user-select: none;
