--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #8858CF;
+  background-color: #94B5C2;
   cursor: pointer;
-  border: 3px solid;
+  border: 4px solid;
   padding: 5px 10px;
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
   position: relative;
@@ -24,4 +25,42 @@
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
   left: 5px;
+}
+
+.div-play-btn{
+  position: fixed;
+  left: 50%;
+  bottom: 10%;
+  transform: translateX(-100px);
+}
+
+main{
+  height: auto;
+  position: relative;
+}
+
+.logo{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  margin-top: 160px;
+  width: 400px;
+  height: 400px;
+  max-width: 100%;
+  height: auto;
+}
+
+img{
+  user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+}
+
+html{
+  overflow-y: hidden;
+  background-image: url("./images/background.png");
+  background-position: center;
+  background-attachment: fixed;
 }
