--- a/style.css
+++ b/style.css
@@ -34,18 +34,12 @@
   transform: translateX(-100px);
 }
 
-main{
-  height: auto;
-  position: relative;
-}
-
 .logo{
   position: absolute;
-  top: 50%;
+  top: -25px;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%);
-  margin-top: 160px;
+  transform: translate(-50%);
   width: 400px;
   height: 400px;
   max-width: 100%;
@@ -63,4 +57,26 @@ html{
   background-image: url("./images/background.png");
   background-position: center;
   background-attachment: fixed;
+}
+
+.tutorial{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+}
+
+.slide{
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.carrousel-tutorial{
+  display: flex;
+  align-items: center;
 }
