--- a/style.css
+++ b/style.css
@@ -53,13 +53,17 @@ img{
 }
 
 html{
-  overflow-y: hidden;
+  overflow: hidden;
   background-image: url("./images/background.png");
   background-position: center;
   background-attachment: fixed;
 }
 
 .tutorial{
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: 2;
+  grid-gap: 350px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -68,15 +72,38 @@ html{
 }
 
 .slide{
-  width: 300px;
-  height: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
+.slide-img{
+  padding: 10px;
+  height: 250px;
+  width: 250px;
+}
+
+.slide-txt{
+  padding: 10px;
+  width: 250px;
+  height: auto;
+  font-family: "AlteHaasGrostekRegular";
+  font-weight: bold;
+  font-size: 24px;
+  color: #8858CF;
+}
+
 .carrousel-tutorial{
   display: flex;
+  grid-row: 1;
   align-items: center;
+}
+
+.carrousel-btn{
+  display: block;
+  grid-row: 2;
 }
